# ee_workshop_project

./: README.md
absatee_receiver_pico/: Display.cpp  Display.h  RadioReceiver.cpp  RadioReceiver.h  absatee_receiver_pico.ino
absatee_transmitter/: Cargo.toml
absatee_transmitter/.cargo/: config.toml
absatee_transmitter/src/: main.rs
absatee_transmitter_pico/: absatee_transmitter_pico.ino
absatee_transmitter_rust/: Cargo.toml  test
absatee_transmitter_rust/.cargo/: config.toml
absatee_transmitter_rust/src/: main.rs
example_library_arduino/: HCWireless.cpp  HCWireless.h  keywords.txt
example_library_arduino/Examples/Blink/HCWireless_Blink_Rx_Example/: HCWireless_Blink_Rx_Example.ino
example_library_arduino/Examples/Blink/HCWireless_Blink_Tx_Example/: HCWireless_Blink_Tx_Example.ino
example_library_arduino/Examples/Send_Array/HCWireless_Send_Array_Rx_Example/: HCWireless_Send_Array_Rx_Example.ino
example_library_arduino/Examples/Send_Array/HCWireless_Send_Array_Tx_Example/: HCWireless_Send_Array_Tx_Example.ino
example_library_arduino/Examples/Send_Structure/HCWireless_Send_Struct_Rx_Example/: HCWireless_Send_Struct_Rx_Example.ino
example_library_arduino/Examples/Send_Structure/HCWireless_Send_Struct_Tx_Example/: HCWireless_Send_Struct_Tx_Example.ino
example_library_arduino/Examples/Send_Text/HCWireless_Send_Text_Rx_Example/: HCWireless_Send_Text_Rx_Example.ino
example_library_arduino/Examples/Send_Text/HCWireless_Send_Text_Tx_Example/: HCWireless_Send_Text_Tx_Example.ino
