[package]
name = "absatee_transmitter"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-binutils = "0.3.6"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
elf2uf2-rs = "2.0.0"
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rp-pico = "0.9.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.2", features = ["rt"] }


# this lets you use `cargo fix`!
[[bin]]
name = "absatee_transmitter"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
